test/fail/ac/predicateboolexp.app
//predicate should contain a Bool expression
application test

section predicate

predicate foo(i:Int){
  i  
}